# SAR-Research

./: .gitignore  8GB_VRAM_GUIDE.md  CHANGELOG.md  CLAUDE.md  EXPLANATION.md  README.md  SAR proposal.docx  argument.py  augment.py  cnn.py  data.py  environment.yml  evaluate.py  gan.py  gnn.py  main.py  pipeline (1).ipynb  pipeline.ipynb  pre1.py  pyproject.toml  requirements.txt  test-gpy.py  train_8gb.sh  trainer.py
.ipynb_checkpoints/: pipeline-checkpoint.ipynb
