[project]
name = "sar-research"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch==2.1.2",
    "torchvision==0.16.2",
    "numpy<2",
    "pillow",
    "scikit-learn",
    "matplotlib",
    "scikit-image",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
